--- a/media/css/standard.css
+++ b/media/css/standard.css
@@ -1,7 +1,9 @@
 * {
-  margin: 0
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .glass {
-    background-color: rgba(255, 0, 0, 0.5); /* 0.5 = 50% transparent */
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent red */
 }
