--- a/media/css/standard.css
+++ b/media/css/standard.css
@@ -1,9 +1,20 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+body {
+  height: 100vh;
+  width: 100vw;
+
+  /* MUST have a background to see transparency */
+  background: #222;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .glass {
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent red */
+  width: 300px;
+  height: 200px;
+
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black */
+
+  border-radius: 10px;
 }
